--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "dev:svg:inline": "svgo -q --config=src/_server/build/svgo-config-inline.yml $f -o src/_client/svg/compiled",
     "dev:svg:src": "svgo -q --config=src/_server/build/svgo-config-src.yml $f -o static/svg",
     "dev:svg:cleanup": "rm -rf src/_client/svg/compiled; mkdir src/_client/svg/compiled; rm -rf static/svg; mkdir static/svg; for i in $(find src/_client/svg/originals -name '*.svg' -type f); do f=$i c=\"\\033[32m\" yarn run -s dev:svg:compile; done;",
-    "watch:svg": "SHELL=/bin/bash chokidar 'src/_client/svg/originals/**.svg' -c 'f={path} e={event} run-s -s dev:svg:if' --silent"
+    "watch:svg": "SHELL=/bin/bash chokidar 'src/_client/svg/originals/**.svg' -c 'f={path} e={event} run-s -s dev:svg:if' --silent",
+    "dev:json:if": "if [ $e = \"unlink\" ]; then c=\"\\033[31m\" n=\"${f//src\\/_client\\/json\\/}\" yarn run -s dev:json:unlink; else c=\"\\033[32m\" yarn run -s dev:json:compile; fi;",
+    "dev:json:info": "echo \"\\033[0;35m---> JSON file event $c$e\\033[0;35m\\033[0m $f\"",
+    "dev:json:compile": "yarn run -s dev:json:info; node -r esm src/_server/build/json-compile.js",
+    "dev:json:unlink": "yarn run -s dev:json:info; rm src/_client/json/$n",
+    "watch:json": "SHELL=/bin/bash chokidar 'src/_client/json/**.js' -c 'f={path} e={event} run-s -s dev:json:if' --silent"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -47,9 +52,11 @@
     "babel-register": "6.26.0",
     "chokidar": "^2.0.4",
     "chokidar-cli": "1.2.2",
+    "date-fns": "1.30.1",
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
     "dotenv-parse-variables": "0.2.0",
+    "lorem-ipsum": "2.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "7.0.14",
     "postcss-cli": "6.1.2",
