--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "colors": "1.3.3",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
+    "dayjs": "1.8.12",
     "esm": "3.2.18",
     "express": "4.16.4",
     "helmet": "3.16.0",
@@ -52,7 +53,6 @@
     "babel-register": "6.26.0",
     "chokidar": "^2.0.4",
     "chokidar-cli": "1.2.2",
-    "date-fns": "1.30.1",
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
     "dotenv-parse-variables": "0.2.0",
@@ -80,7 +80,7 @@
     "rollup-plugin-svelte": "^5.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "sapper": "0.26.0-alpha.12",
-    "svelte": "3.0.0-beta.19",
+    "svelte": "3.0.0-beta.21",
     "svgo": "1.2.0",
     "tinycolor2": "1.4.1"
   }
