Loading from GraphCMS API

--- a/.env.defaults
+++ b/.env.defaults
@@ -1,3 +1,6 @@
 NODE_ENV=development
 PORT=3000
+JM_HOST=http://localhost:3000
+# JM_GRAPHCMS_ENDPOINT=
+# JM_GRAPHCMS_TOKEN=
 JM_JWT_SECRET=replace-this-with-a-solid-and-unique-secret
