--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:articles:fix": "node -r esm -r ./src/server/build/config.js scripts/articles-fix.js",
     "dev:externalassets-1:generate": "node -r esm -r ./src/server/build/config.js scripts/externalassets-generate-1.js",
     "dev:externalassets-2:generate": "node -r esm -r ./src/server/build/config.js scripts/externalassets-generate-2.js",
+    "dev:resources:generate": "node -r esm -r ./src/server/build/config.js scripts/resources-generate.js",
     "watch": "trim watch --svgo --postcss --json"
   },
   "dependencies": {
