--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
     "sirv": "0.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
+    "@babel/plugin-transform-runtime": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "@babel/runtime": "7.4.5",
     "@sapper-dragon/json": "0.0.8",
     "@sapper-dragon/postcss": "0.0.7",
     "@sapper-dragon/svgo": "0.0.7",
