Moving things to correct place

--- a/package.json
+++ b/package.json
@@ -10,22 +10,14 @@
     "start": "node __sapper__/build",
     "debug": "sapper dev --inspect",
     "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
-    "dev:postcss:global": "NODE_ENV=development BUNDLE=App postcss src/_client/postcss/global.postcss -o static/css/global.css -m --verbose --config src/_server/build",
-    "watch:postcss:global": "yarn run -s dev:postcss:global -w",
-    "dev:svg:if": "if [ $e = \"unlink\" ]; then c=\"\\033[31m\" n=\"${f//src\\/_client\\/svg\\/originals\\/}\" yarn run -s dev:svg:unlink; else c=\"\\033[32m\" yarn run -s dev:svg:compile; fi;",
-    "dev:svg:info": "echo \"\\033[0;35m---> SVG file event $c$e\\033[0;35m\\033[0m $f\"",
-    "dev:svg:compile": "yarn run -s dev:svg:info; run-p -s dev:svg:inline dev:svg:src;",
-    "dev:svg:unlink": "yarn run -s dev:svg:info; rm src/_client/svg/compiled/$n; rm static/svg/$n",
-    "dev:svg:inline": "svgo -q --config=src/_server/build/svgo-config-inline.yml $f -o src/_client/svg/compiled",
-    "dev:svg:src": "svgo -q --config=src/_server/build/svgo-config-src.yml $f -o static/svg",
-    "dev:svg:cleanup": "rm -rf src/_client/svg/compiled; mkdir src/_client/svg/compiled; rm -rf static/svg; mkdir static/svg; for i in $(find src/_client/svg/originals -name '*.svg' -type f); do f=$i c=\"\\033[32m\" yarn run -s dev:svg:compile; done;",
-    "watch:svg": "SHELL=/bin/bash chokidar 'src/_client/svg/originals/**.svg' -c 'f={path} e={event} run-s -s dev:svg:if' --silent",
-    "dev:json:if": "if [ $e = \"unlink\" ]; then c=\"\\033[31m\" n=\"${f//src\\/_client\\/json\\/}\" yarn run -s dev:json:unlink; else c=\"\\033[32m\" yarn run -s dev:json:compile; fi;",
+    "watch": "trim watch --svgo --postcss",
+
+    "dev:json:if": "if [ $e = \"unlink\" ]; then c=\"\\033[31m\" n=\"${f//src\\/client\\/json\\/}\" yarn run -s dev:json:unlink; else c=\"\\033[32m\" yarn run -s dev:json:compile; fi;",
     "dev:json:info": "echo \"\\033[0;35m---> JSON file event $c$e\\033[0;35m\\033[0m $f\"",
-    "dev:json:compile": "yarn run -s dev:json:info; node -r esm src/_server/build/json-compile.js",
-    "dev:json:unlink": "yarn run -s dev:json:info; rm src/_client/json/$n",
-    "dev:generate:news": "node -r esm -r ./src/_server/build/config.js scripts/generate-dummy-news.js",
-    "watch:json": "SHELL=/bin/bash chokidar 'src/_client/json/**.js' -c 'f={path} e={event} run-s -s dev:json:if' --silent"
+    "dev:json:compile": "yarn run -s dev:json:info; node -r esm src/server/build/json-compile.js",
+    "dev:json:unlink": "yarn run -s dev:json:info; rm src/client/json/$n",
+    "dev:generate:news": "node -r esm -r ./src/server/build/config.js scripts/generate-dummy-news.js",
+    "watch:json": "SHELL=/bin/bash chokidar 'src/client/json/**.js' -c 'f={path} e={event} run-s -s dev:json:if' --silent"
   },
   "dependencies": {
     "ansi-colors": "3.2.4",
