--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "debug": "sapper dev --inspect",
     "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
     "watch": "trim watch --svgo --postcss",
-
     "dev:json:if": "if [ $e = \"unlink\" ]; then c=\"\\033[31m\" n=\"${f//src\\/client\\/json\\/}\" yarn run -s dev:json:unlink; else c=\"\\033[32m\" yarn run -s dev:json:compile; fi;",
     "dev:json:info": "echo \"\\033[0;35m---> JSON file event $c$e\\033[0;35m\\033[0m $f\"",
     "dev:json:compile": "yarn run -s dev:json:info; node -r esm src/server/build/json-compile.js",
@@ -22,19 +21,19 @@
   "dependencies": {
     "ansi-colors": "3.2.4",
     "bcryptjs": "2.4.3",
-    "body-parser": "1.18.3",
+    "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
-    "cross-fetch": "3.0.2",
-    "dayjs": "1.8.12",
-    "esm": "3.2.18",
-    "express": "4.16.4",
-    "helmet": "3.16.0",
+    "cross-fetch": "3.0.3",
+    "dayjs": "1.8.14",
+    "esm": "3.2.25",
+    "express": "4.17.1",
+    "helmet": "3.18.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.9.1",
     "passport": "0.4.0",
     "passport-local": "1.0.0",
-    "sirv": "0.2.2"
+    "sirv": "0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -45,43 +44,27 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "1.7.0",
     "babel-register": "6.26.0",
-    "chokidar": "^2.0.4",
+    "chokidar": "3.0.0",
     "chokidar-cli": "1.2.2",
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
     "dotenv-parse-variables": "0.2.0",
     "immutable": "4.0.0-rc.12",
-    "jsdom": "14.0.0",
-    "lorem-ipsum": "2.0.0",
+    "jsdom": "15.1.1",
+    "lorem-ipsum": "2.0.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "7.0.14",
-    "postcss-cli": "6.1.2",
-    "postcss-custom-media": "7.0.7",
-    "postcss-easy-import": "3.0.0",
-    "postcss-functions": "3.0.0",
-    "postcss-global-nested": "1.2.0",
-    "postcss-hexrgba": "1.0.1",
-    "postcss-math": "0.0.10",
-    "postcss-media-minmax": "4.0.0",
-    "postcss-nested": "4.1.2",
-    "postcss-reporter": "6.0.1",
-    "postcss-scss": "2.0.0",
-    "postcss-simple-vars": "5.0.2",
-    "postcss-strip-inline-comments": "0.1.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "rollup": "1.6.0",
+    "rollup": "1.12.5",
     "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-commonjs": "^9.1.6",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "2.1.1",
+    "rollup-plugin-commonjs": "10.0.0",
+    "rollup-plugin-node-resolve": "5.0.0",
+    "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4",
-    "sapper": "0.26.0-alpha.12",
-    "slate": "0.45.0",
-    "slate-html-serializer": "0.7.38",
-    "svelte": "3.0.0-beta.28",
-    "svgo": "1.2.0",
-    "tinycolor2": "1.4.1"
+    "rollup-plugin-terser": "5.0.0",
+    "sapper": "0.27.1",
+    "slate": "0.47.3",
+    "slate-html-serializer": "0.8.5",
+    "svelte": "3.4.4"
   }
 }
