--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,4 +17,5 @@
 	},
 	"javascript.suggestionActions.enabled": false,
 	"svelte.plugin.typescript.diagnostics.enable": false,
+	"debug.node.autoAttach": "on",
 }
