--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sirv": "0.4.2"
   },
   "devDependencies": {
+    "@arxpoetica/utils": "0.0.2",
     "@babel/core": "7.4.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "7.4.4",
