--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
-    "cross-fetch": "3.0.3",
+    "cross-fetch": "3.0.4",
     "dayjs": "1.8.14",
     "esm": "3.2.25",
     "express": "4.17.1",
@@ -41,28 +41,28 @@
     "@babel/preset-env": "7.4.5",
     "@babel/runtime": "7.4.5",
     "@sapper-dragon/json": "0.0.9",
-    "@sapper-dragon/postcss": "0.0.7",
+    "@sapper-dragon/postcss": "0.0.8",
     "@sapper-dragon/svgo": "0.0.7",
-    "@sapper-dragon/trimmings": "0.0.8",
+    "@sapper-dragon/trimmings": "0.0.9",
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
     "dotenv-parse-variables": "0.2.0",
     "immutable": "4.0.0-rc.12",
     "jsdom": "14.0.0",
-    "lorem-ipsum": "2.0.2",
+    "lorem-ipsum": "2.0.3",
     "npm-run-all": "^4.1.5",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "rollup": "1.13.1",
+    "rollup": "1.15.1",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-commonjs": "10.0.0",
     "rollup-plugin-node-resolve": "5.0.1",
     "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-svelte": "^5.0.1",
+    "rollup-plugin-svelte": "5.1.0",
     "rollup-plugin-terser": "5.0.0",
-    "sapper": "0.27.1",
+    "sapper": "0.27.4",
     "slate": "0.45.0",
     "slate-html-serializer": "0.7.38",
-    "svelte": "3.4.4"
+    "svelte": "3.5.1"
   }
 }
