Doing some new-fangled crazy faffing resolution
https://mobile.twitter.com/Rich_Harris/status/1139908960520220677

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .DS_Store
-node_modules
 /__sapper__/
 .esm-cache
 .env
@@ -7,3 +6,7 @@ node_modules
 !.env.defaults
 /_hidden
 /src/routes/_refresh.svelte
+
+/node_modules
+!/src/node_modules
+/src/node_modules/@sapper
