--- a/package.json
+++ b/package.json
@@ -26,11 +26,10 @@
     "dayjs": "1.8.14",
     "esm": "3.2.25",
     "express": "4.17.1",
+    "firebase": "6.2.0",
     "helmet": "3.18.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.9.1",
-    "passport": "0.4.0",
-    "passport-local": "1.0.0",
     "sirv": "0.4.2"
   },
   "devDependencies": {
@@ -47,6 +46,7 @@
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
     "dotenv-parse-variables": "0.2.0",
+    "firebase-admin": "8.2.0",
     "immutable": "4.0.0-rc.12",
     "jsdom": "14.0.0",
     "lorem-ipsum": "2.0.3",
@@ -56,6 +56,7 @@
     "rollup": "1.15.6",
     "rollup-plugin-babel": "^4.0.2",
     "rollup-plugin-commonjs": "10.0.0",
+    "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.0.3",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-svelte": "5.1.0",
