--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "helmet": "3.18.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.9.1",
+    "quill": "1.3.6",
     "sirv": "0.4.2"
   },
   "devDependencies": {
