--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cross-fetch": "3.0.4",
+    "crypto-js": "3.1.9-1",
     "dayjs": "1.8.14",
     "esm": "3.2.25",
     "express": "4.17.1",
