--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "watch": "trim watch --svgo --postcss --json"
   },
   "dependencies": {
-    "ansi-colors": "3.2.4",
+    "ansi-colors": "4.1.1",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cross-fetch": "3.0.4",
     "crypto-js": "3.1.9-1",
-    "dayjs": "1.8.14",
+    "dayjs": "1.8.15",
     "esm": "3.2.25",
     "express": "4.17.1",
-    "firebase": "6.2.0",
+    "firebase": "6.3.0",
     "helmet": "3.18.0",
     "jsonwebtoken": "8.5.1",
     "morgan": "1.9.1",
@@ -37,32 +37,30 @@
   },
   "devDependencies": {
     "@arxpoetica/utils": "0.0.2",
-    "@babel/core": "7.4.5",
+    "@babel/core": "7.5.4",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-env": "7.4.5",
-    "@babel/runtime": "7.4.5",
+    "@babel/plugin-transform-runtime": "7.5.0",
+    "@babel/preset-env": "7.5.4",
+    "@babel/runtime": "7.5.4",
     "@sapper-dragon/json": "0.0.9",
     "@sapper-dragon/postcss": "0.0.8",
     "@sapper-dragon/svgo": "0.0.7",
     "@sapper-dragon/trimmings": "0.0.9",
     "dotenv-expand": "5.1.0",
     "dotenv-extended": "2.4.0",
-    "dotenv-parse-variables": "0.2.0",
+    "dotenv-parse-variables": "0.2.2",
     "firebase-admin": "8.2.0",
-    "immutable": "4.0.0-rc.12",
-    "jsdom": "14.0.0",
     "lorem-ipsum": "2.0.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.15.6",
-    "rollup-plugin-babel": "^4.0.2",
-    "rollup-plugin-commonjs": "10.0.0",
+    "rollup": "1.16.7",
+    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-commonjs": "10.0.1",
     "rollup-plugin-json": "4.0.0",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-svelte": "5.1.0",
-    "rollup-plugin-terser": "5.0.0",
+    "rollup-plugin-terser": "5.1.1",
     "sapper": "0.27.4",
-    "svelte": "3.5.1"
+    "svelte": "3.6.7"
   }
 }
