--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "start": "node __sapper__/build",
     "debug": "sapper dev --inspect",
     "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
-    "dev:articles:generate": "node -r esm -r ./src/build/config.js scripts/articles-generate.js",
-    "dev:articles:fix": "node -r esm -r ./src/build/config.js scripts/articles-fix.js",
-    "dev:externalassets-1:generate": "node -r esm -r ./src/build/config.js scripts/externalassets-generate-1.js",
-    "dev:externalassets-2:generate": "node -r esm -r ./src/build/config.js scripts/externalassets-generate-2.js",
-    "dev:resources:generate": "node -r esm -r ./src/build/config.js scripts/resources-generate.js",
+    "dev:articles:generate": "node -r esm -r ./config.js scripts/articles-generate.js",
+    "dev:articles:fix": "node -r esm -r ./config.js scripts/articles-fix.js",
+    "dev:externalassets-1:generate": "node -r esm -r ./config.js scripts/externalassets-generate-1.js",
+    "dev:externalassets-2:generate": "node -r esm -r ./config.js scripts/externalassets-generate-2.js",
+    "dev:resources:generate": "node -r esm -r ./config.js scripts/resources-generate.js",
     "watch": "trim watch --svgo --postcss --json"
   },
   "dependencies": {
+    "@arxpoetica/utils": "0.0.2",
     "ansi-colors": "4.1.1",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
@@ -25,40 +26,37 @@
     "cookie-parser": "1.4.4",
     "cross-fetch": "3.0.4",
     "crypto-js": "3.1.9-1",
-    "dayjs": "1.8.15",
+    "dayjs": "1.8.16",
+    "dotenv": "8.2.0",
     "esm": "3.2.25",
     "express": "4.17.1",
-    "helmet": "3.20.0",
+    "helmet": "3.21.1",
     "jsonwebtoken": "8.5.1",
+    "lorem-ipsum": "2.0.3",
     "morgan": "1.9.1",
-    "quill": "1.3.6",
+    "quill": "1.3.7",
     "sirv": "0.4.2"
   },
   "devDependencies": {
-    "@arxpoetica/utils": "0.0.2",
-    "@babel/core": "7.5.5",
+    "@babel/core": "7.6.4",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "@babel/runtime": "7.5.5",
-    "@sapper-dragon/json": "0.0.9",
-    "@sapper-dragon/postcss": "0.0.8",
-    "@sapper-dragon/svgo": "0.0.7",
-    "@sapper-dragon/trimmings": "0.0.9",
-    "dotenv-expand": "5.1.0",
-    "dotenv-extended": "2.4.0",
-    "dotenv-parse-variables": "0.2.2",
-    "lorem-ipsum": "2.0.3",
+    "@babel/plugin-transform-runtime": "7.6.2",
+    "@babel/preset-env": "7.6.3",
+    "@babel/runtime": "7.6.3",
+    "@sapper-dragon/json": "0.0.10",
+    "@sapper-dragon/postcss": "0.0.10",
+    "@sapper-dragon/svgo": "0.0.10",
+    "@sapper-dragon/trimmings": "0.0.10",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.19.4",
+    "rollup": "1.24.0",
     "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.0.2",
+    "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-svelte": "5.1.0",
-    "rollup-plugin-terser": "5.1.1",
-    "sapper": "0.27.8",
-    "svelte": "3.8.1"
+    "rollup-plugin-terser": "5.1.2",
+    "sapper": "0.27.9",
+    "svelte": "3.12.1"
   }
 }
