--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "SEE LICENCE IN LICENSE",
   "scripts": {
     "dev": "sapper dev",
-    "build": "npx sapper build --legacy",
+    "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "debug": "sapper dev --inspect",
