--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=3000
 LYNX_HOST=http://localhost:3000
+LYNX_SITE_NAME=Site Name
 LYNX_GRAPHCMS_ENDPOINT=https://graph.cms.endpoint.goes.here.com
 LYNX_GRAPHCMS_TOKEN=query-token-goes-here
 LYNX_GRAPHCMS_MUTATE_TOKEN=mutate-token-goes-here
