--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "publish": "gcloud builds submit --config=cloudbuild.yaml .",
     "deploy": "beta run deploy yourproject --image gcr.io/arxpoetica/yourproject --region us-central1",
     "bake": "run-s build publish deploy",
-    "watch": "trim watch --svgo --postcss --json"
+    "watch": "trim watch --svgo --postcss --json --env=.env"
   },
   "dependencies": {
     "@arxpoetica/utils": "0.0.2",
@@ -42,13 +42,13 @@
     "@babel/plugin-transform-runtime": "7.7.4",
     "@babel/preset-env": "7.7.4",
     "@babel/runtime": "7.7.4",
-    "@sapper-dragon/json": "0.0.10",
-    "@sapper-dragon/postcss": "0.0.10",
-    "@sapper-dragon/svgo": "0.0.10",
-    "@sapper-dragon/trimmings": "0.0.10",
+    "@sapper-dragon/json": "0.1.0",
+    "@sapper-dragon/postcss": "0.1.0",
+    "@sapper-dragon/svgo": "0.1.0",
+    "@sapper-dragon/trimmings": "0.1.1",
     "cheerio": "1.0.0-rc.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.27.4",
+    "rollup": "1.27.8",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
@@ -57,6 +57,6 @@
     "rollup-plugin-svelte": "5.1.1",
     "rollup-plugin-terser": "5.1.2",
     "sapper": "0.27.9",
-    "svelte": "3.15.0"
+    "svelte": "3.16.0"
   }
 }
