--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storylynx",
+  "name": "storylynx-template",
   "description": "Tell your story through the hyperlynx of the web.",
   "version": "0.0.1",
   "license": "MIT",
