--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@babel/plugin-transform-runtime": "7.7.4",
     "@babel/preset-env": "7.7.4",
     "@babel/runtime": "7.7.4",
+    "@rollup/plugin-json": "4.0.0",
+    "@rollup/plugin-replace": "2.2.1",
     "@sapper-dragon/json": "0.1.0",
     "@sapper-dragon/postcss": "0.1.1",
     "@sapper-dragon/svgo": "0.1.0",
@@ -51,9 +53,7 @@
     "rollup": "1.27.8",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-json": "4.0.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-replace": "2.2.0",
     "rollup-plugin-svelte": "5.1.1",
     "rollup-plugin-terser": "5.1.2",
     "sapper": "0.27.9",
