Removing CSS from commited (only created on build)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "sapper dev",
-    "build": "sapper build --legacy",
+    "build": "trim build --postcss --env=.env && sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "debug": "sapper dev --inspect",
@@ -38,20 +38,20 @@
     "storylynx": "link:../storylynx"
   },
   "devDependencies": {
-    "@babel/core": "7.7.4",
+    "@babel/core": "7.7.5",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
-    "@babel/plugin-transform-runtime": "7.7.4",
-    "@babel/preset-env": "7.7.4",
-    "@babel/runtime": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.7.6",
+    "@babel/preset-env": "7.7.6",
+    "@babel/runtime": "7.7.6",
     "@rollup/plugin-json": "4.0.0",
     "@rollup/plugin-replace": "2.2.1",
     "@sapper-dragon/json": "0.1.0",
-    "@sapper-dragon/postcss": "0.1.1",
+    "@sapper-dragon/postcss": "0.1.3",
     "@sapper-dragon/svgo": "0.1.0",
-    "@sapper-dragon/trimmings": "0.1.1",
+    "@sapper-dragon/trimmings": "0.1.3",
     "cheerio": "1.0.0-rc.3",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.27.8",
+    "rollup": "1.27.9",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
