--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "publish": "gcloud builds submit --config=cloudbuild.yaml .",
     "deploy": "beta run deploy yourproject --image gcr.io/arxpoetica/yourproject --region us-central1",
     "bake": "run-s build publish deploy",
-    "watch": "trim watch --svgo --postcss --json --env=.env"
+    "watch": "trim watch --svgo --postcss --env=.env"
   },
   "dependencies": {
     "@arxpoetica/utils": "0.0.2",
@@ -45,7 +45,6 @@
     "@babel/runtime": "7.7.6",
     "@rollup/plugin-json": "4.0.0",
     "@rollup/plugin-replace": "2.2.1",
-    "@sapper-dragon/json": "0.1.0",
     "@sapper-dragon/postcss": "0.1.3",
     "@sapper-dragon/svgo": "0.1.0",
     "@sapper-dragon/trimmings": "0.1.3",
