--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "cookie-parser": "1.4.4",
     "cross-fetch": "3.0.4",
     "crypto-js": "3.1.9-1",
-    "dayjs": "1.8.17",
+    "dayjs": "1.8.18",
     "dotenv": "8.2.0",
     "esm": "3.2.25",
     "express": "4.17.1",
@@ -38,25 +38,27 @@
     "storylynx": "link:../storylynx"
   },
   "devDependencies": {
-    "@babel/core": "7.7.5",
+    "@babel/core": "7.7.7",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
     "@babel/plugin-transform-runtime": "7.7.6",
-    "@babel/preset-env": "7.7.6",
-    "@babel/runtime": "7.7.6",
-    "@rollup/plugin-json": "4.0.0",
-    "@rollup/plugin-replace": "2.2.1",
+    "@babel/preset-env": "7.7.7",
+    "@babel/runtime": "7.7.7",
+    "@rollup/plugin-json": "4.0.1",
+    "@rollup/plugin-replace": "2.3.0",
     "@sapper-dragon/postcss": "0.1.3",
     "@sapper-dragon/svgo": "0.1.0",
     "@sapper-dragon/trimmings": "0.1.3",
     "cheerio": "1.0.0-rc.3",
+    "chokidar": "3.3.1",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.27.13",
+    "rollup": "1.27.14",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-svelte": "5.1.1",
     "rollup-plugin-terser": "5.1.3",
     "sapper": "0.27.9",
-    "svelte": "3.16.4"
+    "svelte": "3.16.7",
+    "totalist": "1.0.1"
   }
 }
