--- a/package.json
+++ b/package.json
@@ -17,23 +17,15 @@
     "watch": "trim watch --svgo --postcss --env=.env"
   },
   "dependencies": {
-    "@arxpoetica/utils": "0.0.2",
     "ansi-colors": "4.1.1",
-    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
-    "cross-fetch": "3.0.4",
-    "crypto-js": "3.1.9-1",
-    "dayjs": "1.8.18",
     "dotenv": "8.2.0",
     "esm": "3.2.25",
     "express": "4.17.1",
     "helmet": "3.21.2",
-    "jsonwebtoken": "8.5.1",
-    "lorem-ipsum": "2.0.3",
     "morgan": "1.9.1",
-    "quill": "1.3.7",
     "sirv": "0.4.2",
     "storylynx": "link:../storylynx"
   },
@@ -43,18 +35,17 @@
     "@babel/plugin-transform-runtime": "7.7.6",
     "@babel/preset-env": "7.7.7",
     "@babel/runtime": "7.7.7",
+    "@rollup/plugin-commonjs": "11.0.0",
     "@rollup/plugin-json": "4.0.1",
+    "@rollup/plugin-node-resolve": "6.0.0",
     "@rollup/plugin-replace": "2.3.0",
     "@sapper-dragon/postcss": "0.1.3",
     "@sapper-dragon/svgo": "0.1.0",
     "@sapper-dragon/trimmings": "0.1.3",
-    "cheerio": "1.0.0-rc.3",
     "chokidar": "3.3.1",
     "npm-run-all": "^4.1.5",
     "rollup": "1.27.14",
     "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-svelte": "5.1.1",
     "rollup-plugin-terser": "5.1.3",
     "sapper": "0.27.9",
