--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
+    "lynx-init": "dotenv lynx init",
     "dev": "sapper dev",
     "build": "trim build --postcss --env=.env && sapper build --legacy",
     "export": "sapper export --legacy",
@@ -43,6 +44,7 @@
     "@sapper-dragon/svgo": "0.1.0",
     "@sapper-dragon/trimmings": "0.1.3",
     "chokidar": "3.3.1",
+    "dotenv-cli": "3.1.0",
     "npm-run-all": "^4.1.5",
     "rollup": "1.27.14",
     "rollup-plugin-babel": "4.3.3",
