--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "debug": "sapper dev --inspect",
     "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
     "keyring": "gcloud kms encrypt --plaintext-file=.env.enc-source --ciphertext-file=.env.enc --location=global --keyring=yourkeyring --key=yourkey",
-    "publish": "gcloud builds submit --config=cloudbuild.yaml .",
-    "deploy": "beta run deploy yourproject --image gcr.io/arxpoetica/yourproject --region us-central1",
-    "bake": "run-s build publish deploy",
+    "deploy": "gcloud builds submit --config=cloudbuild.yaml .",
+    "bake": "run-s keyring deploy",
     "watch": "trim watch --svgo --postcss --env=.env"
   },
   "dependencies": {
@@ -28,7 +27,7 @@
     "helmet": "3.21.3",
     "morgan": "1.9.1",
     "sirv": "0.4.2",
-    "storylynx": "link:../storylynx"
+    "storylynx": "git+https://git@github.com/arxpoetica/storylynx.git"
   },
   "devDependencies": {
     "@babel/core": "7.8.6",
@@ -46,7 +45,7 @@
     "chokidar": "3.3.1",
     "dotenv-cli": "3.1.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "1.31.1",
+    "rollup": "1.32.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-svelte": "5.1.1",
     "rollup-plugin-terser": "5.2.0",
