Copied from archived admin branch

--- a/package.json
+++ b/package.json
@@ -17,15 +17,22 @@
     "watch": "trim watch --svgo --postcss --env=.env"
   },
   "dependencies": {
+    "@arxpoetica/utils": "0.0.2",
     "ansi-colors": "4.1.1",
+    "bcryptjs": "2.4.3",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
+    "cross-fetch": "3.0.4",
+    "crypto-js": "4.0.0",
+    "dayjs": "1.8.21",
     "dotenv": "8.2.0",
     "esm": "3.2.25",
     "express": "4.17.1",
     "helmet": "3.21.3",
+    "jsonwebtoken": "8.5.1",
     "morgan": "1.9.1",
+    "quill": "1.3.7",
     "sirv": "0.4.2",
     "storylynx": "git+https://git@github.com/arxpoetica/storylynx.git"
   },
@@ -44,7 +51,7 @@
     "@sapper-dragon/trimmings": "0.1.3",
     "chokidar": "3.3.1",
     "dotenv-cli": "3.1.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "rollup": "1.32.0",
     "rollup-plugin-babel": "4.3.3",
     "rollup-plugin-svelte": "5.1.1",
