--- a/package.json
+++ b/package.json
@@ -30,26 +30,26 @@
     "storylynx": "git+https://git@github.com/arxpoetica/storylynx.git"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "7.9.6",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.9.0",
-    "@babel/preset-env": "7.9.5",
-    "@babel/runtime": "7.9.2",
+    "@babel/plugin-transform-runtime": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/runtime": "7.9.6",
+    "@rollup/plugin-babel": "5.0.0",
     "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-json": "4.0.2",
-    "@rollup/plugin-node-resolve": "7.1.1",
-    "@rollup/plugin-replace": "2.3.1",
+    "@rollup/plugin-json": "4.0.3",
+    "@rollup/plugin-node-resolve": "7.1.3",
+    "@rollup/plugin-replace": "2.3.2",
     "@sapper-dragon/postcss": "0.1.3",
     "@sapper-dragon/svgo": "0.1.0",
     "@sapper-dragon/trimmings": "0.1.3",
-    "chokidar": "3.3.1",
+    "chokidar": "3.4.0",
     "dotenv-cli": "3.1.0",
     "npm-run-all": "4.1.5",
-    "rollup": "1.32.0",
-    "rollup-plugin-babel": "4.4.0",
+    "rollup": "2.7.6",
     "rollup-plugin-svelte": "5.2.1",
     "rollup-plugin-terser": "5.3.0",
     "sapper": "0.27.12",
-    "svelte": "3.20.1"
+    "svelte": "3.22.1"
   }
 }
