--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "description": "Tell your story through the hyperlynx of the web.",
   "version": "0.0.1",
   "license": "MIT",
+  "volta": {
+    "node": "14.4.0"
+  },
   "scripts": {
     "lynx-init": "dotenv lynx init",
     "dev": "sapper dev",
