--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "volta": {
-    "node": "13.14.0"
+    "node": "16.3.0"
   },
   "scripts": {
     "lynx-init": "dotenv lynx init",
@@ -12,50 +12,51 @@
     "build": "trim build --postcss --env=.env && sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
+    "watch": "trim watch --svgo --postcss --env=.env",
     "debug": "sapper dev --inspect",
     "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
     "keyring": "gcloud kms encrypt --plaintext-file=.env.enc-source --ciphertext-file=.env.enc --location=global --keyring=yourkeyring --key=yourkey",
-    "cleanup": "rm -rf node_modules && rm yarn.lock && yarn cache clean && yarn install",
     "deploy": "gcloud builds submit --config=cloudbuild.yaml .",
     "bake": "run-s keyring deploy",
     "cors": "gsutil cors set cors.json gs://storylynx-asset-loader",
-    "watch": "trim watch --svgo --postcss --env=.env"
+    "cleanup": "rm -rf node_modules && rm pnpm-lock.yaml && pnpm install",
+    "update": "pnpm update --interactive --latest"
   },
   "dependencies": {
     "ansi-colors": "4.1.1",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "esm": "3.2.25",
     "express": "4.17.1",
-    "helmet": "4.1.0",
+    "helmet": "4.6.0",
     "morgan": "1.10.0",
-    "sirv": "1.0.6",
+    "sirv": "1.0.12",
     "storylynx": "arxpoetica/storylynx",
     "storylynx-api-graphcms": "arxpoetica/storylynx-api-graphcms"
   },
   "devDependencies": {
-    "@babel/core": "7.11.4",
+    "@babel/core": "7.14.5",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.11.0",
-    "@babel/preset-env": "7.11.0",
-    "@babel/runtime": "7.11.2",
-    "@rollup/plugin-babel": "5.2.0",
-    "@rollup/plugin-commonjs": "15.0.0",
+    "@babel/plugin-transform-runtime": "7.14.5",
+    "@babel/preset-env": "7.14.5",
+    "@babel/runtime": "7.14.5",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "9.0.0",
-    "@rollup/plugin-replace": "2.3.3",
-    "@sapper-dragon/postcss": "0.1.4",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@rollup/plugin-replace": "2.4.2",
+    "@sapper-dragon/postcss": "0.1.5",
     "@sapper-dragon/svgo": "0.1.4",
     "@sapper-dragon/trimmings": "0.1.4",
-    "chokidar": "3.4.2",
-    "dotenv-cli": "3.2.0",
+    "chokidar": "3.5.1",
+    "dotenv-cli": "4.0.0",
     "npm-run-all": "4.1.5",
-    "rollup": "2.26.8",
-    "rollup-plugin-svelte": "6.0.0",
-    "rollup-plugin-terser": "7.0.1",
-    "sapper": "0.28.2",
-    "svelte": "3.24.1"
+    "rollup": "2.51.2",
+    "rollup-plugin-svelte": "7.1.0",
+    "rollup-plugin-terser": "7.0.2",
+    "sapper": "0.29.1",
+    "svelte": "3.38.2"
   }
 }
