--- a/package.json
+++ b/package.json
@@ -37,26 +37,14 @@
     "storylynx-api-graphcms": "arxpoetica/storylynx-api-graphcms"
   },
   "devDependencies": {
-    "@babel/core": "7.14.5",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@babel/plugin-transform-runtime": "7.14.5",
-    "@babel/preset-env": "7.14.5",
-    "@babel/runtime": "7.14.5",
-    "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "19.0.0",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.0",
-    "@rollup/plugin-replace": "2.4.2",
-    "@sapper-dragon/postcss": "0.1.5",
-    "@sapper-dragon/svgo": "0.1.4",
-    "@sapper-dragon/trimmings": "0.1.4",
+    "@sveltejs/kit": "1.0.0-next.1",
     "chokidar": "3.5.1",
     "dotenv-cli": "4.0.0",
     "npm-run-all": "4.1.5",
-    "rollup": "2.51.2",
-    "rollup-plugin-svelte": "7.1.0",
-    "rollup-plugin-terser": "7.0.2",
-    "sapper": "0.29.1",
-    "svelte": "3.38.2"
+    "svelte": "3.38.2",
+    "svelte-check": "2.1.0",
+    "svelte-preprocess": "4.7.3",
+    "tslib": "2.3.0",
+    "typescript": "4.3.2"
   }
 }
