--- a/package.json
+++ b/package.json
@@ -3,18 +3,17 @@
   "description": "Tell your story through the hyperlynx of the web.",
   "version": "0.0.1",
   "license": "MIT",
+  "type": "module",
   "volta": {
     "node": "16.3.0"
   },
   "scripts": {
     "lynx-init": "dotenv lynx init",
-    "dev": "sapper dev",
-    "build": "trim build --postcss --env=.env && sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "watch": "trim watch --svgo --postcss --env=.env",
-    "debug": "sapper dev --inspect",
-    "debug:build": "node --inspect --inspect-brk ./node_modules/sapper/sapper build --legacy",
+    "dev": "dotenv svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "keyring": "gcloud kms encrypt --plaintext-file=.env.enc-source --ciphertext-file=.env.enc --location=global --keyring=yourkeyring --key=yourkey",
     "deploy": "gcloud builds submit --config=cloudbuild.yaml .",
     "bake": "run-s keyring deploy",
@@ -24,21 +23,13 @@
   },
   "dependencies": {
     "ansi-colors": "4.1.1",
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "cookie-parser": "1.4.5",
     "dotenv": "10.0.0",
     "esm": "3.2.25",
-    "express": "4.17.1",
-    "helmet": "4.6.0",
-    "morgan": "1.10.0",
-    "sirv": "1.0.12",
     "storylynx": "arxpoetica/storylynx",
     "storylynx-api-graphcms": "arxpoetica/storylynx-api-graphcms"
   },
   "devDependencies": {
     "@sveltejs/kit": "1.0.0-next.1",
-    "chokidar": "3.5.1",
     "dotenv-cli": "4.0.0",
     "npm-run-all": "4.1.5",
     "svelte": "3.38.2",
