--- a/package.json
+++ b/package.json
@@ -32,9 +32,26 @@
     "@sveltejs/kit": "1.0.0-next.1",
     "dotenv-cli": "4.0.0",
     "npm-run-all": "4.1.5",
+    "postcss": "8.3.2",
+    "postcss-custom-media": "7.0.8",
+    "postcss-easy-import": "3.0.0",
+    "postcss-functions": "3.0.0",
+    "postcss-global-nested": "1.2.0",
+    "postcss-hexrgba": "2.0.1",
+    "postcss-load-config": "3.0.1",
+    "postcss-math": "0.0.10",
+    "postcss-media-minmax": "4.0.0",
+    "postcss-mixins": "6.2.3",
+    "postcss-nested": "4.2.3",
+    "postcss-reporter": "6.0.1",
+    "postcss-scss": "3.0.5",
+    "postcss-simple-vars": "5.0.2",
+    "postcss-strip-inline-comments": "0.1.5",
     "svelte": "3.38.2",
     "svelte-check": "2.1.0",
     "svelte-preprocess": "4.7.3",
+    "svgo": "1.3.2",
+    "tinycolor2": "1.4.1",
     "tslib": "2.3.0",
     "typescript": "4.3.2"
   }
