--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=development
+VITE_LYNX_SITE_NAME=My StoryLynx Site
 LYNX_HOST=http://localhost:3000
 LYNX_TEMPLATE=lynx
 LYNX_SITE_NAME=StoryLynx
