API / load fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 VITE_LYNX_SITE_NAME=StoryLynx
-LYNX_HOST=http://localhost:3000
+VITE_LYNX_HOST=http://localhost:3000
 LYNX_TEMPLATE=lynx
 LYNX_API_PLUGIN=storylynx-api-graphcms
 LYNX_JWT_SECRET=jwt-secret-goes-here
