--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "dependencies": {
     "ansi-colors": "4.1.1",
-    "storylynx": "link:../storylynx",
-    "storylynx-api-graphcms": "link:../storylynx-api-graphcms"
+    "cookie": "0.4.1",
+    "storylynx": "github:arxpoetica/storylynx",
+    "storylynx-api-graphcms": "github:arxpoetica/storylynx-api-graphcms"
   },
   "devDependencies": {
     "@sveltejs/kit": "1.0.0-next.115",
